--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-trafficlight",
+  "name": "react-trafficsignal",
   "version": "0.1.0",
   "author": "Andrea Giovanni Bianchessi <andrea.g.bianchessi@gmail.com>",
   "private": false,
@@ -19,11 +19,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/agbianchessi/React_TrafficLight.git"
+    "url": "git+https://github.com/agbianchessi/React_TrafficSignal.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/agbianchessi/React_TrafficLight/issues"
+    "url": "https://github.com/agbianchessi/React_TrafficSignal/issues"
   },
   "funding": "https://paypal.me/andreagbianchessi",
   "dependencies": {
@@ -61,8 +61,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2"
   }
 }
